--- a/config.sample.cfg
+++ b/config.sample.cfg
@@ -10,7 +10,7 @@ appendLabel = false
 deleteFinished = false
 # If you want rProcess to ignore torrents with certain labels, define them like: ignoreLabel = movie (separate with | for several labels, eg unwanted|dontwant).
 # Needs to have at least one pre-defined value, so don't edit if you don't want to use it
-ignoreLabel =
+ignoreLabel = dontwant
 # If you wish to log debug messages? (true/false)
 debug = false
 
@@ -37,7 +37,6 @@ label = movies
 username = 
 # Your Couchpotato password (leave blank if you don't use one)
 password = 
-
 # Using SSL? (true/false)
 ssl = false
 # Host is the adress to your Couchpotato web ui
@@ -47,7 +46,7 @@ port = 5050
 # Base url alteration (leave blank if you don't use one)
 base_url =
 # API key for your Couchpotato install
-apikey =
+apikey = 
 
 [Sickbeard]
 # True/false depending on if you want to run Sickbeard post-process after rProcess is done
@@ -57,8 +56,7 @@ label = tv
 # Your Sickbeard username (leave blank if you don't use one)
 username = 
 # Your Sickbeard password (leave blank if you don't use one)
-password =
-
+password = 
 # Using SSL? (true/false)
 ssl = false
 # Host is the address to your Sickbeard web ui
